Complete 30 Days of AZD Templates project
- Implement Astro + Starlight static site with 30 lessons across 6 weeks
- Add interactive lesson browser with search, filter, and sort capabilities
- Create centralized lesson metadata in JSON format
- Implement week-based organization (0.1, 1.1-1.7, 2.1-2.7, 3.1-3.7, 4.1-4.7, 5.1)
- Add comprehensive documentation (README, AGENTS, SETUP, PRD, PRE-COMMIT-CHECKLIST)
- Configure GitHub Actions workflow for automated deployment to Pages
- Set up DevContainer with Node 20 and required tools
- Implement responsive design with week-specific gradient badges
- Add single-word tag system for consistent card heights

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,12 @@
 {
   "name": "AZD Templates Dev Container",
   "image": "mcr.microsoft.com/devcontainers/javascript-node:1-20-bookworm",
-  
+
   "features": {
-    "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.12"
-    },
-    "ghcr.io/devcontainers/features/azure-cli:1": {
-      "version": "latest"
-    },
-    "ghcr.io/devcontainers/features/github-cli:1": {
-      "version": "latest"
-    }
+    "ghcr.io/devcontainers/features/python:1": {},
+    "ghcr.io/devcontainers/features/azure-cli:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {},
+    "ghcr.io/azure/azure-dev/azd:0": {}
   },
 
   "customizations": {
@@ -24,7 +19,8 @@
         "ms-python.vscode-pylance",
         "ms-azuretools.vscode-azurefunctions",
         "ms-vscode.azurecli",
-        "GitHub.copilot"
+        "GitHub.copilot",
+        "ms-azuretools.vscode-bicep"
       ],
       "settings": {
         "editor.formatOnSave": true,
